--- a/Lab01/Lab01.ipynb
+++ b/Lab01/Lab01.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "Ta tìm $a$ và $b$ sao cho trung bình bình phương sai số nhỏ nhất khi đoán, tức là tìm $a$ và $b$ sao cho\n",
     "\n",
-    "$ \\sum (y-\\hat{y})^2 = \\sum (y - aX + b)^2 $\n",
+    "$ \\sum (y-\\hat{y})^2 = \\sum (y - aX - b)^2 $\n",
     "\n",
     "đạt giá trị nhỏ nhất.\n",
     "Với $X$, $y$ là các ma trận với mỗi hàng là một sample. Tức là trong bài toán này, mỗi hàng của $X$ là diện tích của một căn nhà, tương ứng hàng của $y$ là giá của nhà đó.\n",
