fix loss equation

--- a/Lab01/Lab01.ipynb
+++ b/Lab01/Lab01.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "Ta tìm $a$ và $b$ sao cho trung bình bình phương sai số nhỏ nhất khi đoán, tức là tìm $a$ và $b$ sao cho\n",
     "\n",
-    "$ \\frac{1}{n} \\sum (y-\\hat{y})^2 = \\frac{1}{n} \\sum (y - aX + b)^2 $\n",
+    "$ \\frac{1}{n} \\sum (y-\\hat{y})^2 = \\frac{1}{n} \\sum (y - aX - b)^2 $\n",
     "\n",
     "đạt giá trị nhỏ nhất, với $n$ là số mẫu.\n",
     "\n",
