clarify solution equation

--- a/Lab01/Lab01.ipynb
+++ b/Lab01/Lab01.ipynb
@@ -277,16 +277,16 @@
     "\n",
     "Ta tìm $a$ và $b$ sao cho trung bình bình phương sai số nhỏ nhất khi đoán, tức là tìm $a$ và $b$ sao cho\n",
     "\n",
-    "$ \\frac{1}{n} \\sum (y-\\hat{y})^2 = \\frac{1}{n} \\sum (y - aX - b)^2 $\n",
+    "$$ \\frac{1}{n} \\sum (y-\\hat{y})^2 = \\frac{1}{n} \\sum (y - aX - b)^2 $$\n",
     "\n",
     "đạt giá trị nhỏ nhất, với $n$ là số mẫu.\n",
     "\n",
-    "Với $X$, $y$ là các ma trận với mỗi hàng là một sample. Tức là trong bài toán này, mỗi hàng của $X$ là diện tích của một căn nhà, tương ứng hàng của $y$ là giá của nhà đó.\n",
+    "Với $X$, $y$ là các ma trận với mỗi hàng là một sample, $X$ là data và $y$ là target.\n",
     "Gọi $Z$ là mận trận mở rộng của $X$ nhưng có thêm một cột toàn số 1.\n",
     "Khi đó nghiệm của bài toán Linear Regression là\n",
-    "$[a,b] = (Z^TZ)^{-1}Z^Ty$\n",
+    "$$(Z^TZ)^{-1}Z^Ty.$$\n",
     "\n",
-    "Cụ thể, bài toán được lập trình như sau"
+    "Tức là trong bài toán này, mỗi hàng của $X$ là diện tích của một căn nhà, tương ứng hàng của $y$ là giá của nhà đó. Cụ thể, bài toán được lập trình như sau"
    ]
   },
   {
