--- a/Lab02/Lab02.ipynb
+++ b/Lab02/Lab02.ipynb
@@ -308,7 +308,8 @@
    "metadata": {},
    "source": [
     "## Bài tập\n",
-    "Cho dữ liệu gồm 100 hàng, gồm chiều rộng, chiều dài và giá của một ngôi nhà, hay xây dựng một mô hình dư đoán giá nhà dựa vào chiều dài và rộng.\n",
+    "Cho dữ liệu gồm 100 hàng, gồm chiều rộng, chiều dài và giá của một ngôi nhà, hay xây dựng một mô hình dư đoán giá nhà dựa vào chiều dài và rộng với giả thuyết\n",
+    "$$ \\text{giá} = a * \\text{rộng} + b* \\text{dài} + c , a, b, c \\in \\mathbb{R}$$\n",
     "- Dùng Gradient Descent giải Linear Regression cho bài toán này \n",
     "    - khởi tạo tham số và chỉnh learning rate cho phù hợp\n",
     "- So sánh kết quả (MSE) với Exact Solution và kết quả từ Sklearn\n",
