--- a/Lab03/Lab03.ipynb
+++ b/Lab03/Lab03.ipynb
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Multi-class Logistic Linear Regression (70% điểm)"
+    "### 2.1 Multi-class Logistic Linear Regression"
    ]
   },
   {
