--- a/Lab02/Lab02.ipynb
+++ b/Lab02/Lab02.ipynb
@@ -210,7 +210,7 @@
     "    if ii % 1000 == 0:\n",
     "        loss = np.mean(np.square(y - np.matmul(Z, theta)))\n",
     "        print(\"Loss at iter {}: {}\".format(ii, loss))\n",
-    "loss = np.mean(np.square(y - a*X-b))\n",
+    "loss = np.mean(np.square(y - np.matmul(Z,theta))\n",
     "print(\"Final loss: \", loss)\n",
     "print(\"Final theta: \", theta)"
    ]
