fix multi-class loss formula

--- a/Lab03/Lab03.ipynb
+++ b/Lab03/Lab03.ipynb
@@ -190,7 +190,7 @@
     "$$ P_\\theta(c|x) = \\frac{e^{\\theta_c \\cdot x}}{\\sum_{c'=0}^2 e^{\\theta_{c'} \\cdot x}},c = 0, 1, 2.$$\n",
     "\n",
     "Gọi $y = (y_0, y_1, y_2)$ là one-hot vector biểu thị loại lá tương ứng với $x$. Ta Tìm các $\\theta$ sao cho\n",
-    "$$ L = \\frac{1}{N} \\sum_{x,y} - y_0 \log P_\\theta(0|x) -  y_1 \log P_\\theta(1|x) - y_2 \log P_\\theta(2|x) $$\n",
+    "$$ L = \\frac{1}{N} \\sum_{x,y} - y_0 \\log P_\\theta(0|x) -  y_1 \\log P_\\theta(1|x) - y_2 \\log P_\\theta(2|x) $$\n",
     "đạt giá trị nhỏ nhất.\n",
     "\n",
     "Tương tự như hưỡng dẫn, hãy viết script giải bài toán trên bằng gradient descent.\n",
