fix loss in code

--- a/Lab03/Lab03.ipynb
+++ b/Lab03/Lab03.ipynb
@@ -120,12 +120,12 @@
     "    if ii % 10000 == 0:\n",
     "        ## predict\n",
     "        pred_proba_train = 1/(1+np.exp(-theta1*x1_train-theta2*x2_train-theta3))            ## xác suất label 0\n",
-    "        train_loss = np.mean(-(1-y_train)*pred_proba_train - y_train*(1-pred_proba_train))\n",
+    "        train_loss = np.mean(-(1-y_train)*np.log(pred_proba_train) - y_train*np.log(1-pred_proba_train))\n",
     "        train_acc = np.mean(y_train == (pred_proba_train < 0.5).astype(int))                ## convert xác suất đoán đc ra nhãn rồi tính accuracy\n",
     "        \n",
     "        \n",
     "        pred_proba_valid = 1/(1+np.exp(-theta1*x1_valid-theta2*x2_valid-theta3))\n",
-    "        valid_loss = np.mean(-(1-y_valid)*pred_proba_valid - y_valid*(1-pred_proba_valid))\n",
+    "        valid_loss = np.mean(-(1-y_valid)*np.log(pred_proba_valid) - y_valid*np.log(1-pred_proba_valid))\n",
     "        valid_acc = np.mean(y_valid == (pred_proba_valid < 0.5).astype(int))\n",
     "        \n",
     "        if valid_acc > best_val_acc:\n",
