fix print accuracy

--- a/Lab03/Lab03.ipynb
+++ b/Lab03/Lab03.ipynb
@@ -138,8 +138,8 @@
     "theta1, theta2, theta3 = best_theta\n",
     "train_acc = np.mean(y_train == (1/(1+np.exp(-theta1*x1_train-theta2*x2_train-theta3)) < 0.5).astype(int))\n",
     "valid_acc = np.mean(y_valid == (1/(1+np.exp(-theta1*x1_valid-theta2*x2_valid-theta3)) < 0.5).astype(int))\n",
-    "print(\"Sklearn accuracy on train: \", train_acc)\n",
-    "print(\"Sklearn accuracy on valid: \", valid_acc)"
+    "print(\"Accuracy on train: \", train_acc)\n",
+    "print(\"Accuracy on valid: \", valid_acc)"
    ]
   },
   {
