--- a/Lab07/Lab07.ipynb
+++ b/Lab07/Lab07.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 07: Neural Network with Back Propagation\n",
+    "# Lab 07: Neural Network with Backpropagation\n",
     "Bài tập này tương tự với Lab 03 Linear Regression, cơ bản chỉ khác thay vì dùng hàm linear, ta dùng một model neural network."
    ]
   },
